# Kinect-PointCloud-Contour

./: ContourDetection.sln
ConsoleApplication2/: ConsoleApplication2.vcxproj
ContourDetection/: CMakeLists.txt  ContourDetection.vcxproj  Main.cpp  kinect2_grabber.h
